infrastructure/pypiserver/deploy/pypi-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pypi
  name: pypi
spec:
  ports:
  - name: 8180-tcp
    port: 8180
    protocol: TCP
    targetPort: 8180
  selector:
    app: pypi
    deploymentconfig: pypi
  sessionAffinity: None
  type: ClusterIP
