infrastructure/pypiserver/deploy/pypi-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pypi
  name: pypi
spec:
  host: pypi.apps.ocp-delta.ocp-delta.ole.redhat.com
  port:
    targetPort: 8180-tcp
  to:
    kind: Service
    name: pypi
    weight: 100
  wildcardPolicy: None
